realised this does not work, now trying new stuff

--- a/TestingNewAI.ipynb
+++ b/TestingNewAI.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,11 +126,9 @@
     "                if(not isinstance(prevW,int)):\n",
     "                    godMat = godMat @ prevW\n",
     "                    chainRes *= godMat @ k.compPrime()\n",
-    "                \n",
-    "                val = np.transpose(godMat) @ chainRes\n",
-    "                prevW = k.w                \n",
+    "                val = np.transpose(godMat) @ chainRes                 \n",
+    "                prevW = k.w\n",
     "                k.b -= val @ np.ones(shape=(val.shape[1],1))\n",
-    "                \n",
     "\n",
     "        self.layers.reverse()\n"
    ]
@@ -162,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -173,8 +171,8 @@
     "    z[input] = 1\n",
     "    return z\n",
     "# Flatten the images\n",
-    "x_train = x_train.reshape(x_train.shape[0], -1)  # input for training\n",
-    "x_test = x_test.reshape(x_test.shape[0], -1)  # input for testing\n",
+    "x_train = x_train.reshape(x_train.shape[0], -1)/255  # input for training\n",
+    "x_test = x_test.reshape(x_test.shape[0], -1)/255  # input for testing\n",
     "y_train = y_train.reshape(1,60_000)\n",
     "output_test = np.apply_along_axis(encode,0,y_train)\n",
     "x_train = np.transpose(x_train)\n",
@@ -185,21 +183,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 63,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "model = ANN(inputLayer('sharma'),Layer(784,15),Layer(15,10))\n",
-    "model.gradientDescent(x_train,output_test)\n",
-    "print(\"\")"
+    "model = ANN(inputLayer('sharma'),Layer(784,15),Layer(15,10))"
    ]
   },
   {
@@ -207,21 +195,16 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "model.gradientDescent(x_train,output_test)\n",
+    "print(\"\")"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.09914999999999996\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\n",
     "def percentAcc(mod):\n",
@@ -237,30 +220,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[2 3 4]\n",
-      " [3 4 5]]\n"
+     "ename": "TypeError",
+     "evalue": "Field elements must be 2- or 3-tuples, got '4'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[66], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m x \u001b[38;5;241m=\u001b[39m \u001b[43mnp\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43marray\u001b[49m\u001b[43m(\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m,\u001b[49m\u001b[38;5;241;43m2\u001b[39;49m\u001b[43m,\u001b[49m\u001b[38;5;241;43m3\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m4\u001b[39;49m\u001b[43m,\u001b[49m\u001b[38;5;241;43m5\u001b[39;49m\u001b[43m,\u001b[49m\u001b[38;5;241;43m6\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m      2\u001b[0m y \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39marray([\u001b[38;5;241m0\u001b[39m,\u001b[38;5;241m4\u001b[39m,\u001b[38;5;241m8\u001b[39m],[\u001b[38;5;241m7\u001b[39m,\u001b[38;5;241m8\u001b[39m,\u001b[38;5;241m9\u001b[39m])\n\u001b[0;32m      3\u001b[0m np\u001b[38;5;241m.\u001b[39meinsum(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mi,j->ij\u001b[39m\u001b[38;5;124m\"\u001b[39m,x,y)\n",
+      "\u001b[1;31mTypeError\u001b[0m: Field elements must be 2- or 3-tuples, got '4'"
      ]
     }
    ],
    "source": [
-    "x = np.array([[1,2,3],[1,2,3]])\n",
-    "y = np.array([[1],[2]])\n",
-    "print(x+y)"
+    "x = np.array([1,2,3])\n",
+    "y = np.array([0,4,8])\n",
+    "np.einsum(\"i,j->ij\",x,y)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 0,  0,  0],\n",
+       "       [ 4,  8, 12],\n",
+       "       [ 8, 16, 24]])"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.einsum(\"i,j->ij\",y,x)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
