--- a/newAi.ipynb
+++ b/newAi.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,6 +42,8 @@
     "        self.fPrime = sharmaActPrime\n",
     "        self.w = np.random.uniform(low=-1,high=1,size=(outputAmnt,inputAmnt))\n",
     "        self.b = np.random.uniform(low=-1,high=1,size=(outputAmnt,1))\n",
+    "        self.dw = np.zeros_like(self.w)\n",
+    "        self.db = np.zeros_like(self.b)\n",
     "        self.linearCombo = 0\n",
     "        self.input = 0\n",
     "    def compute(self,input):\n",
@@ -90,6 +92,7 @@
     "    def __init__(self,input,*layers):\n",
     "        self.layers = list(layers)\n",
     "        self.input = input\n",
+    "        self.internalAlpha = 1\n",
     "    def predict(self,input: np.array):\n",
     "        out = self.input.f(input)\n",
     "        for k in self.layers:\n",
@@ -97,24 +100,51 @@
     "        return out/np.sum(np.abs(out))\n",
     "    def gradientDescent(self,inputs,outputs,alpha):\n",
     "        for (input,output) in zip(inputs,outputs):\n",
-    "            vectorPart = 2*(self.predict(input)-output)\n",
+    "            vectorPart = 2*(self.predict(input)-output) * self.layers[-1].compPrime()\n",
     "            self.layers.reverse()\n",
     "            matThing = np.identity(n=self.layers[0].w.shape[0])\n",
-    "            prevW = -1\n",
+    "            prevW = None\n",
     "            for l in self.layers:\n",
-    "                if(not isinstance(prevW,int)):\n",
+    "                if prevW is not None:\n",
     "                    matThing = matThing @ (prevW * np.transpose(l.compPrime()))\n",
     "                value = np.transpose(matThing) @ vectorPart\n",
-    "                l.b -= alpha * value\n",
-    "                l.w -= value * np.tile(np.transpose(l.input),(l.w.shape[0],1))*alpha\n",
-    "                prevW = l.w\n",
-    "            \n",
-    "            self.layers.reverse()"
+    "                change_b = (l.b - alpha/len(inputs) * value)\n",
+    "                change_w = (l.w - alpha/len(inputs) * (value*np.tile(np.transpose(l.input),(l.w.shape[0],1))))\n",
+    "                if(np.all(np.isfinite(change_b)) and np.all(np.isfinite(change_w))):\n",
+    "                    l.b = change_b\n",
+    "                    l.w = change_w\n",
+    "                else:\n",
+    "                    print(\"is overflowing ruh roh\")\n",
+    "                prevW = l.w  \n",
+    "            self.layers.reverse()\n",
+    "    def alternateDescent(self,inputs,outputs,alpha):\n",
+    "        for (input,output) in zip(inputs,outputs):\n",
+    "            vectorPart = 2*(self.predict(input)-output) * self.layers[-1].compPrime()\n",
+    "            self.layers.reverse()\n",
+    "            matThing = np.identity(n=self.layers[0].w.shape[0])\n",
+    "            prevW = None\n",
+    "            for l in self.layers:\n",
+    "                if prevW is not None:\n",
+    "                    matThing = matThing @ (prevW * np.transpose(l.compPrime()))\n",
+    "                value = np.transpose(matThing) @ vectorPart\n",
+    "                l.b_grad += alpha * value\n",
+    "                l.w_grad += value * np.tile(np.transpose(l.input),(l.w.shape[0],1))*alpha\n",
+    "                prevW = l.w    \n",
+    "            self.layers.reverse()\n",
+    "        for l in self.layers:\n",
+    "            l.w -= l.w_grad/len(inputs)\n",
+    "            l.b -= l.b_grad/len(inputs)\n",
+    "            l.w_grad -= l.w_grad\n",
+    "            l.b_grad -= l.b_grad\n",
+    "    \n",
+    "    \n",
+    "        \n",
+    "      \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,20 +153,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "mnist = tf.keras.datasets.mnist\n",
     "(x_train, y_train), (x_test, y_test) = mnist.load_data()\n",
-    "x_train = x_train.reshape(x_train.shape[0], -1,1)  # input for training\n",
-    "x_test = x_test.reshape(x_test.shape[0], -1,1)  # input for testing\n",
+    "x_train = x_train.reshape(x_train.shape[0], -1,1) / 255  # input for training\n",
+    "x_test = x_test.reshape(x_test.shape[0], -1,1) / 255  # input for testing\n",
     "y_train = y_train.reshape(60_000,1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,29 +179,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
-    "model.gradientDescent(x_train,output_test,1/300_000)\n",
-    "    "
+    "def sigmas(x):\n",
+    "    return 1/(1+max(x,0)/10)\n",
+    "for i in range(1):\n",
+    "    model.gradientDescent(x_train,output_test,sigmas(i)/10)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.6708833333333333\n"
+      "0.5968833333333333\n"
      ]
     }
    ],
    "source": [
-    "#0.67935 (its been stable at about 67.5 percennt)\n",
+    "#0.67935 (its been stable at about 67.5 percennt) 0.5951666666666666\n",
     "def percentAcc(model):\n",
     "    global x_train,y_train\n",
     "    error = 0\n",
@@ -184,45 +216,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for l in model.layers:\n",
-    "        l.b /= np.average(np.abs(l.b))\n",
-    "        l.w /= np.average(np.abs(l.w))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "array([[ 9.78942123e+27,  9.78942123e+27,  9.78942123e+27, ...,\n",
-       "         9.78942123e+27,  9.78942123e+27,  9.78942123e+27],\n",
-       "       [ 3.79874992e+27,  3.79874992e+27,  3.79874992e+27, ...,\n",
-       "         3.79874992e+27,  3.79874992e+27,  3.79874992e+27],\n",
-       "       [ 4.14196321e+28,  4.14196321e+28,  4.14196321e+28, ...,\n",
-       "         4.14196321e+28,  4.14196321e+28,  4.14196321e+28],\n",
-       "       ...,\n",
-       "       [-6.46633770e+27, -6.46633770e+27, -6.46633770e+27, ...,\n",
-       "        -6.46633770e+27, -6.46633770e+27, -6.46633770e+27],\n",
-       "       [-6.25458063e+27, -6.25458063e+27, -6.25458063e+27, ...,\n",
-       "        -6.25458063e+27, -6.25458063e+27, -6.25458063e+27],\n",
-       "       [ 6.79042712e+28,  6.79042712e+28,  6.79042712e+28, ...,\n",
-       "         6.79042712e+28,  6.79042712e+28,  6.79042712e+28]])"
-      ]
-     },
-     "execution_count": 144,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3044.7478651381316\n"
+     ]
     }
    ],
    "source": [
-    "model.layers[0].w"
+    "def mse(model): #(3044.33517272429)\n",
+    "    global x_train,output_test\n",
+    "    error = 0\n",
+    "    for (input,output) in zip(x_train,output_test):\n",
+    "        diff = model.predict(input)-output\n",
+    "        error += np.dot(diff[0],diff[0])\n",
+    "    return error\n",
+    "print(mse(model))"
    ]
   }
  ],
