--- a/ai.ipynb
+++ b/ai.ipynb
@@ -233,14 +233,13 @@
     }
    ],
    "source": [
-    "imageIndex = 10\n",
+    "imageIndex = 100\n",
     "x = x_train[imageIndex].reshape(28,28)\n",
     "plt.imshow(x,cmap='gray')\n",
     "plt.title(f\"Label: {y_train[imageIndex]}\")\n",
     "plt.axis('off')\n",
     "plt.show()\n",
-    "print(f\"ai prediction {np.argmax(model1.compute(x_train[imageIndex]))}\")\n",
-    "print(model1.compute(x_train[imageIndex]))"
+    "print(f\"ai prediction {np.argmax(model1.compute(x_train[imageIndex]))}\")"
    ]
   },
   {
