--- a/ai.ipynb
+++ b/ai.ipynb
@@ -289,6 +289,13 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 289,
    "metadata": {},
    "outputs": [],
@@ -299,6 +306,46 @@
     "#saved the model (current is 90 pct, do not save unless you have found a better one)\n",
     "#archetecture is Dense, act,softmax,Dense,act,softmax"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING: Retrying (Retry(total=4, connect=None, read=None, redirect=None, status=None)) after connection broken by 'NewConnectionError('<pip._vendor.urllib3.connection.HTTPSConnection object at 0x000002A5559DD370>: Failed to establish a new connection: [Errno 11001] getaddrinfo failed')': /simple/smalldiffusion/\n",
+      "WARNING: Retrying (Retry(total=3, connect=None, read=None, redirect=None, status=None)) after connection broken by 'NewConnectionError('<pip._vendor.urllib3.connection.HTTPSConnection object at 0x000002A5559DD670>: Failed to establish a new connection: [Errno 11001] getaddrinfo failed')': /simple/smalldiffusion/\n",
+      "WARNING: Retrying (Retry(total=2, connect=None, read=None, redirect=None, status=None)) after connection broken by 'NewConnectionError('<pip._vendor.urllib3.connection.HTTPSConnection object at 0x000002A5559DD970>: Failed to establish a new connection: [Errno 11001] getaddrinfo failed')': /simple/smalldiffusion/\n",
+      "WARNING: Retrying (Retry(total=1, connect=None, read=None, redirect=None, status=None)) after connection broken by 'NewConnectionError('<pip._vendor.urllib3.connection.HTTPSConnection object at 0x000002A5559DDB20>: Failed to establish a new connection: [Errno 11001] getaddrinfo failed')': /simple/smalldiffusion/\n",
+      "WARNING: Retrying (Retry(total=0, connect=None, read=None, redirect=None, status=None)) after connection broken by 'NewConnectionError('<pip._vendor.urllib3.connection.HTTPSConnection object at 0x000002A5559DDCD0>: Failed to establish a new connection: [Errno 11001] getaddrinfo failed')': /simple/smalldiffusion/\n",
+      "ERROR: Could not find a version that satisfies the requirement smalldiffusion (from versions: none)\n",
+      "ERROR: No matching distribution found for smalldiffusion\n",
+      "\n",
+      "[notice] A new release of pip is available: 24.1.2 -> 25.0.1\n",
+      "[notice] To update, run: python.exe -m pip install --upgrade pip\n"
+     ]
+    }
+   ],
+   "source": [
+    "pip install smalldiffusion\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
