cleaned up stuff, added text so people can understand

--- a/ai.ipynb
+++ b/ai.ipynb
@@ -2,10 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "#imports\n",
     "import tensorflow as tf\n",
     "import numpy as np\n",
     "from numpy import ndarray\n",
@@ -13,9 +14,78 @@
     "import copy\n"
    ]
   },
-  { 
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Mathamatical motivation <br>\n",
+    "In ML, we represent the model as a layer of multivarite functions, labeled $L_n$. <br> \n",
+    "The model is defeined as a mathamatical compositon of all of these layers $M = L_n(L_{n-1}(L_{n-2}(...L_1)))$\n",
+    "Each layer $L_n$ is a function with respect to its paramaters $p$, and input, which is the previous layer.\n",
+    "Then, we have the cost function $C$. This is a scalar function whose exact behavior depends on the ML task, but has key properties: <br>\n",
+    "1. **Can be written as a function of $M$**\n",
+    "2. **Gets bigger as the output's devation from the expected output increases**\n",
+    "3. **is differentiable** <br>\n",
+    "In gradient descent, the idea is to find $\\nabla{C}$ with respect to the model paramaters, subpract the corresponding paramaters, and repeat. <br>\n",
+    "Idea is to move in the direction of steepest descent. <br>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Section II: the algoritm\n",
+    "The modular idea comes from a concept in math called the **multivariate chain rule** <br>\n",
+    "<br> Given a scalar $f=g(\\mathbf{u}(\\vec{I}))$, the gradient $\\nabla{f}$ with respect to $\\vec{I}$ is:\n",
+    "$$\\nabla{f} = \\mathbf{J}_u \\cdot \\nabla{g}$$\n",
+    "Where $\\mathbf{J}_u$ is the jacobian of the multivariate function $\\mathbf{u}$. <br>\n",
+    "Using this rule, we can write an algorithm to find the gradient wtih respect to the outer function's gradient: <br>\n",
+    "for each layer $L_n$, we can write $C = A_n(\\mathbf{L_n}(\\vec{p}))$, where $\\vec{p}$ are the paramaters of the layer, and $A$ is some arbitraty scalar function <br>\n",
+    "We can use the rule baove to find the gradient with respect to the paramaters and easily perform gradient descent. <br>\n",
+    "\n",
+    "Finally, we can find the gradient with respect to the inputs of the layer by writing $C = A_n(\\mathbf{L_n}(\\mathbf{L_{n-1}}))$ and using the multivarite chain rule.<br>\n",
+    "\n",
+    "We then move on to layer $L_{n-1}$. This time, we realize that the outer function $A_{n-1}$ is equal to $A_n(\\mathbf{L_n})$. <br>\n",
+    "Since we already have the gradient of the right hand side, this saves us a lot of computation. <br>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "\n",
+    "As such, we can impliment gradient descent as follows:\n",
+    "1. first, we start at the topmost layer, n = N, and find $\\nabla{C}$ with respect to its input. \n",
+    "2. Complete the algorithm described above, and keep track of the gradient wtih respect to $L_n$'s input\n",
+    "3. Move to the lower layer, n = n-1, and complete step 2 with the newly found gradient. Stop once we reach n = 0"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Code implementation\n",
+    "I represented each layer $L_n$ as a class with 2 key methods:\n",
+    "1. **backprop**: computes the algorithm described in section II, given the gradient of the outer function\n",
+    "2. **feedfoward**: computes the output of the layer given its input\n",
+    "Some layers, like Dense, have inputs allowing for saved paramaters to be entered.\n",
+    "\n",
+    "Then, I implimented a wrapper class called ANN to encapsualte a typical artifical nerual network. It also has 2 key methods:\n",
+    "1. **gradDescent**: computes gradient descent as described in section III, given input-output pairs using a MSE cost function\n",
+    "2. **compute**: given an input, computes the output of the model by chaining the model's layers together"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,6 +149,7 @@
     "        a[self.mask] = 1\n",
     "        a[self.mask1] = np.exp(self.a_0[self.mask1])\n",
     "        return dz * a\n",
+    "#incomplete\n",
     "class ConvlutionLayer:\n",
     "    def __init__(self,length,kernal=None):\n",
     "        if(not kernal):\n",
