--- a/ai.ipynb
+++ b/ai.ipynb
@@ -53,20 +53,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\n",
+    "## Section III: Gradient Descent\n",
     "\n",
     "As such, we can impliment gradient descent as follows:\n",
     "1. first, we start at the topmost layer, n = N, and find $\\nabla{C}$ with respect to its input. \n",
     "2. Complete the algorithm described above, and keep track of the gradient wtih respect to $L_n$'s input\n",
     "3. Move to the lower layer, n = n-1, and complete step 2 with the newly found gradient. Stop once we reach n = 0"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
