--- a/ai.ipynb
+++ b/ai.ipynb
@@ -72,7 +72,7 @@
     "Some layers, like Dense, have inputs allowing for saved paramaters to be entered.\n",
     "\n",
     "Then, I implimented a wrapper class called ANN to encapsualte a typical artifical nerual network. It also has 2 key methods:\n",
-    "1. **gradDescent**: computes gradient descent as described in section III, given input-output pairs using a MSE cost function\n",
+    "1. **gradDescent**: computes gradient descent as described in section III, given input-output pairs. Uses a MSE cost function\n",
     "2. **compute**: given an input, computes the output of the model by chaining the model's layers together"
    ]
   },
@@ -369,39 +369,6 @@
     "np.savez(\"params.npz\",w0=z0.w,b0=z0.b,w1=z3.w,b1=z3.b)\n",
     "#saved the model (current is 90 pct, do not save unless you have found a better one)\n",
     "#archetecture is Dense, act,softmax,Dense,act,softmax"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Note: you may need to restart the kernel to use updated packages.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "WARNING: Retrying (Retry(total=4, connect=None, read=None, redirect=None, status=None)) after connection broken by 'NewConnectionError('<pip._vendor.urllib3.connection.HTTPSConnection object at 0x000002A5559DD370>: Failed to establish a new connection: [Errno 11001] getaddrinfo failed')': /simple/smalldiffusion/\n",
-      "WARNING: Retrying (Retry(total=3, connect=None, read=None, redirect=None, status=None)) after connection broken by 'NewConnectionError('<pip._vendor.urllib3.connection.HTTPSConnection object at 0x000002A5559DD670>: Failed to establish a new connection: [Errno 11001] getaddrinfo failed')': /simple/smalldiffusion/\n",
-      "WARNING: Retrying (Retry(total=2, connect=None, read=None, redirect=None, status=None)) after connection broken by 'NewConnectionError('<pip._vendor.urllib3.connection.HTTPSConnection object at 0x000002A5559DD970>: Failed to establish a new connection: [Errno 11001] getaddrinfo failed')': /simple/smalldiffusion/\n",
-      "WARNING: Retrying (Retry(total=1, connect=None, read=None, redirect=None, status=None)) after connection broken by 'NewConnectionError('<pip._vendor.urllib3.connection.HTTPSConnection object at 0x000002A5559DDB20>: Failed to establish a new connection: [Errno 11001] getaddrinfo failed')': /simple/smalldiffusion/\n",
-      "WARNING: Retrying (Retry(total=0, connect=None, read=None, redirect=None, status=None)) after connection broken by 'NewConnectionError('<pip._vendor.urllib3.connection.HTTPSConnection object at 0x000002A5559DDCD0>: Failed to establish a new connection: [Errno 11001] getaddrinfo failed')': /simple/smalldiffusion/\n",
-      "ERROR: Could not find a version that satisfies the requirement smalldiffusion (from versions: none)\n",
-      "ERROR: No matching distribution found for smalldiffusion\n",
-      "\n",
-      "[notice] A new release of pip is available: 24.1.2 -> 25.0.1\n",
-      "[notice] To update, run: python.exe -m pip install --upgrade pip\n"
-     ]
-    }
-   ],
-   "source": [
-    "pip install smalldiffusion\n"
    ]
   },
   {
