added neccecary notes

--- a/ai.ipynb
+++ b/ai.ipynb
@@ -18,6 +18,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# NOTE:\n",
+    "This document assumes familiarity with multivariate calculus and matrix calculus. My goal was not to teach these concepts, but to show how the multivariate chain rule naturally leads to a modular, scalable implementation of backpropagation in neural networks.\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Mathamatical motivation <br>\n",
     "In ML, we represent the model as a layer of multivarite functions, labeled $L_n$. <br> \n",
     "The model is defeined as a mathamatical compositon of all of these layers $M = L_n(L_{n-1}(L_{n-2}(...L_1)))$\n",
@@ -40,7 +50,7 @@
     "$$\\nabla{f} = \\mathbf{J}_u \\cdot \\nabla{g}$$\n",
     "Where $\\mathbf{J}_u$ is the jacobian of the multivariate function $\\mathbf{u}$. <br>\n",
     "Using this rule, we can write an algorithm to find the gradient wtih respect to the outer function's gradient: <br>\n",
-    "for each layer $L_n$, we can write $C = A_n(\\mathbf{L_n}(\\vec{p}))$, where $\\vec{p}$ are the paramaters of the layer, and $A$ is some arbitraty scalar function <br>\n",
+    "for each layer $L_n$, we can write $C = A_n(\\mathbf{L_n}(\\vec{p}))$, where $\\vec{p}$ are the paramaters of the layer, and $A$ is the composition of all the other layers that im too lazy to write <br>\n",
     "We can use the rule baove to find the gradient with respect to the paramaters and easily perform gradient descent. <br>\n",
     "\n",
     "Finally, we can find the gradient with respect to the inputs of the layer by writing $C = A_n(\\mathbf{L_n}(\\mathbf{L_{n-1}}))$ and using the multivarite chain rule.<br>\n",
@@ -466,7 +476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 189,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -484,14 +494,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": 190,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0.8951, 0.8956666666666666, 0.8965, 0.89715, 0.8981666666666667, 0.8991, 0.8996999999999999, 0.8999, 0.8994833333333333, 0.9003333333333333, 0.9009, 0.9013166666666667, 0.9017, 0.8979666666666667, 0.8983166666666667]\n"
+      "[0.9036333333333333, 0.9041, 0.90445, 0.90485, 0.90535, 0.90575, 0.9061666666666667, 0.9064, 0.9070666666666667, 0.9073333333333333, 0.9077500000000001, 0.9080666666666667, 0.9083, 0.9087833333333333, 0.9091166666666667]\n"
      ]
     }
    ],
@@ -501,16 +511,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 188,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.09863333333333335"
+       "0.8983166666666667"
       ]
      },
-     "execution_count": 130,
+     "execution_count": 188,
      "metadata": {},
      "output_type": "execute_result"
     }
