made it more rigorus

--- a/ai.ipynb
+++ b/ai.ipynb
@@ -47,8 +47,9 @@
     "## Section II: the algoritm\n",
     "The modular idea comes from a concept in math called the **multivariate chain rule** <br>\n",
     "<br> Given a scalar $f=g(\\mathbf{u}(\\vec{I}))$, the gradient $\\nabla{f}$ with respect to $\\vec{I}$ is:\n",
-    "$$\\nabla{f} = \\mathbf{J}_u \\cdot \\nabla{g}$$\n",
+    "$$\\nabla{f} = \\mathbf{J}_u^\\top \\cdot \\nabla{g}$$\n",
     "Where $\\mathbf{J}_u$ is the jacobian of the multivariate function $\\mathbf{u}$. <br>\n",
+    "Note that here, we are computing matrix multiplcation between the jacobian matrix $\\mathbf{J}_u$ and the multivariate function $\\mathbf{u}$ <br>\n",
     "Using this rule, we can write an algorithm to find the gradient wtih respect to the outer function's gradient: <br>\n",
     "for each layer $L_n$, we can write $C = A_n(\\mathbf{L_n}(\\vec{p}))$, where $\\vec{p}$ are the paramaters of the layer, and $A$ is the composition of all the other layers that im too lazy to write <br>\n",
     "We can use the rule baove to find the gradient with respect to the paramaters and easily perform gradient descent. <br>\n",
